--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
 	"author": "Greg Miller",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
+	"browserslist": [
+		"Edge 16"
+	],
+	"postcss": {
+		"plugins": {
+			"autoprefixer": {}
+		}
+	},
 	"scripts": {
 		"build": "wp-scripts build --webpack-src-dir=src --webpack-copy-php",
 		"format": "wp-scripts format",
@@ -11,10 +19,16 @@
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start --webpack-src-dir=src --webpack-copy-php"
+		"start": "wp-scripts start  --webpack-src-dir=src --webpack-copy-php",
+		"build:css": "postcss src/app.css -o build/app.css"
+
 	},
 	"devDependencies": {
+		"@wordpress/browserslist-config": "^5.12.0",
 		"@wordpress/postcss-plugins-preset": "^4.13.0",
-		"@wordpress/scripts": "^26.0.0"
+		"@wordpress/scripts": "^26.0.0",
+		"autoprefixer": "^10.4.14",
+		"browserslist": "^4.21.5",
+		"postcss-cli": "^10.1.0"
 	}
 }
